Changelog - to keep track of all relevant changes

please update the categories "new features" and "bugfixes" before a pull request merge!

version 1.2.0
new features:
- merge hdf5 utility has multithreading option


version 1.1.2 - 
new features:
- Veff utility can now handle extended bins
- New tutorial and example for the webinar
- trace start time for the electric field models adjusted such that global time of pulse position corresponds to propagation time
- Simplified treatment of reference angles and polarization for the ARZ module
- Proposal 6.1.1 supported
- Safeguard for events at more than 20 degrees from the Cherenkov angle when using the ARZ models
- Antenna model now needs to be fully specified in the detector description (previously `_InfFirn` was automatically appended to the antenna name for antennas below the surface)

bugfixes:
- Fixed primary particle code bug when using Proposal
- Fixed geometry cut when generating secondary particles

version 1.1.1 - 2020/03/23
new features
- New version for the ARZ model available (ARZ2020) 
- a list with event ids can be passed to the main simulation class. All events not in this list will not be simulated. 
  This is useful for a quick resimulation of certain events. 
- Alvarez???? Askaryan models now place the trace into the center of the trace (instead of 50ns into the trace) 
- New data set array 'vertex_times' contains the time elapsed from the first interaction to the current interaction
- new utility to split output hdf5 files into smaller chucks (to be able to resimulate events on a cluster)
- Greenland added to proposal config
- new unforced event generator module
- improved Earth model (PREM), path from interaction vertex through Earth is calculated (before interaction was assumed
  to happen at the surface)
- detector description is saved to nur output files
- new handling of random numbers. Each module has its own random generator instance. Global seed can be controlled via 
  config file setting.